# random__pre_commit_messages

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  auto-git-messsage.py  dummy.py  gg.txt  old_pyproject.toml  pyproject.toml
auto_git_message/: commit_messages.txt  generator.py
