[tool.poetry]
name = "auto_git_message"
version = "0.1.0"
description = "Adding git messages automatically."
authors = ["Anders Steen <asteennilsen@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
create_message = 'auto_git_message.generator:generate_message'

[tool.black]
line-length = 88
skip-string-normalization = true